--- a/data/projectsData.json
+++ b/data/projectsData.json
@@ -32,7 +32,7 @@
             "project_name": "Object Oriented Game Show App",
             "description": "An object oriented game show app where users guess letters to a phrase",
             "technologies": ["JavaScript", "HTML", "CSS"],
-            "live_link": "https://ubersp4m.github.io/a_random_quote_generator-v1/",
+            "live_link": "https://ubersp4m.github.io/oop_game-v2/",
             "github_link": "https://github.com/Ubersp4m/oop_game-v2",
             "image_urls": ["/images/oopgameshow1.png", "/images/oopgameshow2.png", "/images/oopgameshow3.png"]
         },
